# chuck

./: .gitignore  pyproject.toml  readme.md
data/: Labor_Standards_Act7.txt  Labor_Standards_Act7_cleaned.json  NTU_rule.txt  final_NTU_rule.txt  final_NTU_rule_flat.txt  ntu_chunks_fixed.json  ntu_chunks_langchain_long.json  ntu_chunks_langchain_mid.json  ntu_chunks_langchain_short.json  useful.json  useful_cleaned.json
log/: anomaly_log.txt
prompt/: .txt
tools/: extract_clean_qa_pairs.py  log_anomaly_checker.py  pdf_loader.py  split_ntu_rule.py  text_cleaner.py  useful_clean.py  useful_ntu.py
