[project]
name = "chuck"
version = "0.1.0"
description = "Chunking strategy evaluation for RAG systems"
authors = [
    {name = "AntonShih", email = "anton.shih7@gmail.com"}
]

requires-python = "=3.10"
dependencies = [
    "openai>=1.14.3",
    "pinecone-client>=3.0.0",
    "langchain>=0.1.17",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.5.3",
    "pymupdf (>=1.26.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "chuck", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
